<resources>
    <string name="app_name">Mandoob</string>

    <string name="welcome">أهلا بك في خدمة مندوب لتوصيل البضائع والمنتجات في سلطنة عمان، هذه الاستمارة مخصصة لتقديم طلب التوصيل الرجاء تعبئة الاستمارة بالكامل بالبيانات الصحيحة ليعتبر تقديم الطلب مقبولا.
الاستفسارات على الواتس اب : 95222485 </string>

    <string name="mandoob">مندوب؟</string>

    <string name="mandoobInfo">توفر لك شركة مندوب كابتن توصيل حسب الطلب لمعظم مناطق ومحافظات السلطنة. والشركة ليس لها جدول توصيل محدد لكل ولاية وإنما نعتمد الطلب وحالة التوفر.</string>

    <string name="steps">خطوات تقديم طلب توصيل بواسطة خدمة مندوب:</string>

    <string name="stepsInfo">  تعبئة البيانات المطلوبة في هذه الاستمارة ثم

 سيتم التواصل مع صاحب الطلب، وتأكيد سعر ووقت التسليم واخيراً

 تأكيد الطلب وبدء عملية التوصيل حسب الوقت المتفق.</string>

    <string name="main">الشروط والسياسات:</string>

    <string name="mainInfo"> هذه الاستمارة مخصصة لطلبات التوصيل.
 على صاحب الطلب التأكد من إدخال البيانات الصحيحة لغرض التوصيل وبيانات المستلم.
 إشعار المستلم بأن التوصيل سيتم من خلال خدمة مندوب، عليه يرجى إشعاره بوقت الاستلام كما وسيتم الإفصاح عن رقم هاتفه ومكان الاستلام لكابتن التوصيل.
 في حالة إرسال الهدايا والمفاجآت، يتحمل مقدم الطلب المسؤولية القانونية لها.
 لا تتحمل الشركة مسؤولية استلام وتسليم المبالغ النقدية مالم يتم ذكرها عند تقديم الطلب على هذه الاستمارة.
 طلبات التوصيل الجديدة لا تتم إلا من خلال هذه الاستمارة، وفي حالة التعاقد مباشرة مع كابتن توصيل مسجل لدينا لطلبات توصيل جديدة سيتم حظر الكابتن والمستفيد من الخدمة معا.
 يحق لشركة مندوب الكشف عن محتوى البعائث في حالة عدم اليقين من محتواها.</string>

    <string name="agreement">أوافق على الشروط والسياسات المتبعة في خدمة مندوب: </string>

    <string name="exit">شكراً لإستخدامك برنامج مندوب، لإنهاء البرنامج اضغط خروج وللعودة لقائمة الشروط اضغط السابق </string>

    <string name="sTypr"> نوع الخدمة: </string>

    <string name="senderInfo"> بيانات المرسل: </string>
    <string name="sendrtName"> اسم مقدم الطلب: </string>
    <string name="senderWahs"> رقم واتساب المرسل :</string>
    <string name="type"> نوع الغرض: </string>
    <string name="sAddresss"> وصف مكان المرسل  يرجى ذكر المنطقه مع وصف المكان :</string>
    <string name="timeTake"> متى تريدنا نشل الطلب؟
الرجاء تحديد اليوم والوقت</string>

    <string name="resiverInfo"> بيانات المرسل إليه: </string>
    <string name="resiverNumber"> رقم واتساب المرسل إليه: </string>
    <string name="resiverDdress"> وصف مكان المرسل إليه يرجى ذكر المنطقه مع وصف المكان :</string>
    <string name="kowOrNor"> هل المرسل إليه على علم بموضوع التوصيل؟ </string>
    <string name="anyPrice"> هل سوف يتم استلام مبالغ نقدية من المرسل إليه؟ </string>
    <string name="price">اذكر قيمة المبلغ إن وجد </string>
    <string name="wayPay">طريقة الدفع: </string>
    <string name="nots">ملاحظات أخرى تود إضافتها:  </string>

</resources>
