<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zainabalmezeini.mandoob.ArabicInfo"
   android:background="@drawable/mandoob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/welcome"
            android:textAppearance="@style/textwel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#43A047"
            android:gravity="right"
            android:text="@string/mandoob"
            android:textAppearance="@style/heding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/mandoobInfo"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#43A047"
            android:gravity="right"
            android:text="@string/steps"
            android:textAppearance="@style/heding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/stepsInfo"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#43A047"
            android:gravity="right"
            android:text="@string/main"
            android:textAppearance="@style/heding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/mainInfo"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/agreement"
            android:textStyle="bold"
            android:textColor="#000000"
            />

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="نعم"
        android:id="@+id/yes"
        android:textSize="20dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="15dp"
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="لا"
        android:id="@+id/no"
        android:textSize="20dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:onClick="onRadioButtonClicked"/>

</RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="التالي"
            android:textSize="15dp"
            android:background="#43A047"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:onClick="nextActivity"/>


    </LinearLayout>
</ScrollView>
